# edvac-emulator

./: .gitignore  Cargo.toml  sources.md
benches/: additions.rs
src/: bin.rs  lib.rs  memory.rs  operating_console.rs  order_macros.rs  orders.rs  wire.rs  word.rs
src/assembler/: mod.rs
src/core/: computer.rs  high_speed_memory.rs  mod.rs  operating_console.rs  order_macros.rs  orders.rs  wire.rs  word.rs
src/test_programs/: dec_to_bin.edvac  dec_to_bin.rs  mod.rs
src/ui/: address_input.rs  auxiliary_input.rs  button_panels.rs  excess_magnitude_options.rs  logging.rs  memory_mode_input.rs  mod.rs  operating_mode_input.rs  program_loader.rs  special_order_input.rs  threading.rs
src/ui/style/: button.rs  container.rs  knob.rs  mod.rs  text.rs
