[package]
name = "edvac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.0"
iced = "0.3"
# while this is a non-audio project, there are really nice knobs in iced_audio
iced_audio = "0.7"
rfd = "0.8.4"
log = "0.4"

[[bin]]
name = "edvac-emulator"
path = "src/bin.rs"

[lib]